# serializer version: 1
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.61248 |    0.04879 |   -0.20305 |     0.05959 |     -0.01983 |   -0.30896 |   -0.3183  |     0.20728 |         -0.27042 |      -0.05053 |       -0.03522 |
      |  2 |            2 | 2.20594 | -0.17775 |   -0.04833 |   -0.37423 |     0.00532 |      0.03792 |   -0.09993 |   -0.33886 |     0.15643 |         -0.34512 |       0.04954 |       -0.06671 |
      |  3 |            3 | 2.20594 |  0.05963 |    0.55566 |   -0.11366 |     0.03059 |      0.06252 |    0.9354  |    0.16418 |     0.07416 |          0.20878 |       0.02039 |        0.018   |
      |  4 |            4 | 2.20594 |  0.46231 |    0.06991 |    0.13374 |     0.00933 |     -0.15418 |   -0.15606 |    0.07526 |     0.06802 |          0.01623 |      -0.02258 |       -0.03693 |
      |  5 |            5 | 2.20594 |  0.25209 |    0.05935 |   -0.06038 |     0.11495 |      0.07309 |   -0.04687 |   -0.31811 |     0.15502 |         -0.04725 |      -0.07898 |       -0.04146 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 |  0.15574 |    0.05454 |    0.0797  |     0.14368 |      0.11963 |    0.11068 |    0.15782 |     0.17617 |          0.0679  |       0.12421 |        0.074   |
      |  2 |            2 |      0 |  0.09418 |    0.04668 |    0.05615 |     0.09273 |      0.08507 |    0.07676 |    0.12754 |     0.12323 |          0.0475  |       0.08617 |        0.05653 |
      |  3 |            3 |      0 |  0.18819 |    0.0634  |    0.07503 |     0.13337 |      0.13467 |    0.14768 |    0.18608 |     0.21563 |          0.08401 |       0.13232 |        0.06642 |
      |  4 |            4 |      0 |  0.14772 |    0.05941 |    0.08013 |     0.09048 |      0.14096 |    0.07979 |    0.14598 |     0.20654 |          0.05209 |       0.09172 |        0.05834 |
      |  5 |            5 |      0 |  0.11314 |    0.05866 |    0.07909 |     0.10141 |      0.11468 |    0.10407 |    0.22486 |     0.25212 |          0.05738 |       0.11545 |        0.07611 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_ctree_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |   -0.79677 |   -0.13991 |   -0.15336 |     -0.41307 |
      |  2 |            2 | 2.20594 |   -0.5158  |   -0.13083 |   -0.18083 |     -0.37426 |
      |  3 |            3 | 2.20594 |    0.52809 |    1.04504 |    0.08053 |      0.36199 |
      |  4 |            4 | 2.20594 |    0.61434 |   -0.09523 |    0.0739  |     -0.12795 |
      |  5 |            5 | 2.20594 |    0.05036 |    0.15168 |    1e-05   |     -0.1406  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |           -0 |
      |  5 |            5 |      0 |          0 |          0 |          0 |           -0 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 | 2.20594 | -0.337094 |   0.009722 |  -0.021973 |    0.037009 |    -0.08685  |  -0.144811 |  -0.23839  |   -0.056259 |        -0.337094 |     -0.180769 |      -0.146608 |
      |  2 |            2 | 2.20594 | -0.225046 |  -0.025753 |  -0.117479 |   -0.05132  |    -0.071272 |  -0.00509  |  -0.162632 |   -0.075391 |        -0.225046 |     -0.130607 |      -0.112092 |
      |  3 |            3 | 2.20594 |  0.287922 |   0.120306 |  -0.117593 |   -0.06249  |     0.348171 |   0.804091 |   0.393572 |    0.131953 |         0.287922 |     -0.100838 |      -0.077377 |
      |  4 |            4 | 2.20594 |  0.160383 |   0.036444 |   0.199727 |    0.046141 |     0.131281 |  -0.176979 |   0.071346 |   -0.041392 |         0.160383 |     -0.025295 |      -0.096977 |
      |  5 |            5 | 2.20594 |  0.022379 |  -0.151356 |   0.188623 |    0.033073 |     0.127528 |   0.067483 |   0.006497 |    0.026087 |         0.022379 |     -0.118542 |      -0.162698 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |   IncomeCategory |   AgeCategory |   LocationType |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|-----------------:|--------------:|---------------:|
      |  1 |            1 |      0 | 0.051455 |   0.066061 |   0.059751 |    0.082972 |     0.053063 |   0.069697 |   0.060032 |    0.061869 |         0.051455 |      0.057322 |       0.031409 |
      |  2 |            2 |      0 | 0.039629 |   0.046841 |   0.04731  |    0.09762  |     0.052171 |   0.04932  |   0.050543 |    0.075239 |         0.039629 |      0.032853 |       0.029906 |
      |  3 |            3 |      0 | 0.084573 |   0.143381 |   0.148537 |    0.075545 |     0.074961 |   0.140237 |   0.098611 |    0.070795 |         0.084573 |      0.140785 |       0.104128 |
      |  4 |            4 |      0 | 0.031261 |   0.066519 |   0.057718 |    0.082823 |     0.051396 |   0.053605 |   0.046519 |    0.076745 |         0.031261 |      0.042677 |       0.076807 |
      |  5 |            5 |      0 | 0.026034 |   0.057615 |   0.062432 |    0.024765 |     0.041316 |   0.047593 |   0.047619 |    0.038698 |         0.026034 |      0.039275 |       0.083837 |
    ''',
  })
# ---
# name: TestCategoricalOutputs.test_rf_regressor_vaeac_categorical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|--------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 | 2.20594 |  -0.647914 |  -0.24186  |  -0.183472 |    -0.429872 |
      |  2 |            2 | 2.20594 |  -0.534311 |  -0.050468 |  -0.113543 |    -0.503405 |
      |  3 |            3 | 2.20594 |   0.773499 |   0.904996 |   0.104951 |     0.232194 |
      |  4 |            4 | 2.20594 |   0.493528 |  -0.098202 |   0.032454 |     0.037282 |
      |  5 |            5 | 2.20594 |  -0.092411 |   0.19473  |  -0.040981 |     0.000115 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   NumericA |   NumericB |   Location |   Categories |
      |---:|-------------:|-------:|-----------:|-----------:|-----------:|-------------:|
      |  1 |            1 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  2 |            2 |      0 |         -0 |         -0 |         -0 |           -0 |
      |  3 |            3 |      0 |          0 |          0 |          0 |            0 |
      |  4 |            4 |      0 |          0 |         -0 |          0 |            0 |
      |  5 |            5 |      0 |         -0 |          0 |         -0 |            0 |
    ''',
  })
# ---
